<resources>
    <string name="app_name">Demo first Application </string>
    <string name="page_main">Hi!! , This\'s test first Application </string>
    <string name="page_1_top_label">This first page of application</string>
    <string name="page_2_top_label">This second page of application</string>

    <string name="btn_page_1">Page 1</string>
    <string name="btn_page_2">Page 2</string>
    <string name="btn_next_page">Go to next page</string>
    <string name="btn_main_page">Back to main page</string>
    <string name="btn_call_http">Call Http</string>

    <string name="email_hint">Please insert your e-mail</string>
    <string name="email_invalid">invalidated email</string>
    <string name="email_require">e-mail is require</string>
    <string name="loading">Loading . . .</string>
</resources>